--- a/templates/inicio_sesion.html
+++ b/templates/inicio_sesion.html
@@ -11,9 +11,9 @@
     </div>
     <div><!-- Div que divide la página a la mitad-->
         <h1>Inicia sesión en **nombre de la app**</h1>
-        <form>
-            <input type="text" placeholder="Nombre de usuario o correo electrónico">
-            <input type="password" placeholder="Contraseña">
+        <form action="/login" method="POST">
+            <input type="text" name="username" id="username" placeholder="Nombre de usuario o correo electrónico">
+            <input type="password" name="password" id="password" placeholder="Contraseña">
             <input type="submit" value="Iniciar sesión">
         </form>
         <input type="button" value="Registrarse">
