--- a/templates/perfil.html
+++ b/templates/perfil.html
@@ -13,9 +13,14 @@
         </form>
     </div>
     <div><!-- Contenido -->
-        Foto
-        Usuario
-        usuario@ejemplo.com
+        {% if profile_picture %}
+            <h3>Foto de Perfil:</h3>
+            <img src="data:image/png;base64,{{ profile_picture }}" alt="Foto de perfil">
+        {% else %}
+            <p>No hay foto de perfil disponible.</p>
+        {% endif %}
+        {{ user.username }}
+        {{ user.email }}
         Seguiendo x  Seguidores x
         Publicaciones
         
@@ -30,5 +35,12 @@
         </div>
     </div>
     
+    {% if session['username'] %}
+        <p>Bienvenido, {{ session['username'] }}</p>
+        <a href="{{ url_for('logout') }}">Cerrar sesión</a>
+    {% else %}
+        <a href="{{ url_for('home') }}">Iniciar sesión</a>
+    {% endif %}
+
 </body>
 </html>
