--- a/templates/inicio_sesion.html
+++ b/templates/inicio_sesion.html
@@ -16,7 +16,9 @@
             <input type="password" name="password" id="password" placeholder="Contraseña">
             <input type="submit" value="Iniciar sesión">
         </form>
-        <input type="button" value="Registrarse">
+        <a href="{{ url_for('crear_cuenta') }}">
+            <button>Registrarse</button>
+        </a>
     </div>
     
 </body>
