Registro de usuario

--- a/templates/crear_cuenta.html
+++ b/templates/crear_cuenta.html
@@ -16,7 +16,7 @@
             <input type="email" name="correo" placeholder="Correo electrónico" required>
             <input type="password" name="contrasena" placeholder="Contraseña" required>
             <input type="password" name="confirmar_contrasena" placeholder="Confirmar contraseña" required>
-            <input type="submit" value="Crear cuenta">
+            <button type="submit">Crear cuenta</button>
         </form>
         
         {% if error %}
