--- a/templates/inicio_sesion.html
+++ b/templates/inicio_sesion.html
@@ -4,14 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="{{url_for('static', filename='./CSS/inicio_sesion.css')}}">
-    <title>App</title>
+    <title>IncioSesion</title>
 </head>
 <body class="body1">
-    <div> <!-- Div que divide la página a la mitad-->
-
-    </div>
-    <div><!-- Div que divide la página a la mitad-->
-        
         <form action="/login" method="POST">
             <div class="container">
                 <div class="cubo1">
@@ -41,13 +36,6 @@
                 <input type="submit" value="Iniciar sesión" class="btn1">
                 <input type="button" value="Registrarse" class="btn1">
             </div>
-         
-            
-            
-            
-        </form>
-        
-    </div>
-    
+        </form>         
 </body>
 </html>
