Poder modificar el perfil y pequeño cambio en el boton registro

--- a/templates/inicio_sesion.html
+++ b/templates/inicio_sesion.html
@@ -34,8 +34,10 @@
             </div>
             <div class="container2">
                 <input type="submit" value="Iniciar sesión" class="btn1">
-                <input type="button" value="Registrarse" class="btn1">
+                <a href="{{ url_for('crear_cuenta') }}" class="btn1">Registrarse</a>
+
             </div>
-        </form>         
+        </form>  
+              
 </body>
 </html>
