--- a/static/CSS/inicio_sesion.css
+++ b/static/CSS/inicio_sesion.css
@@ -96,6 +96,33 @@
     color: black;
     font-size: 16px;
 }
+
+a {
+    text-decoration: none; /* Eliminar subrayado */
+    display: flex; /* Flexbox */
+    justify-content: center; /* Centra horizontalmente */
+    align-items: center; /* Centra verticalmente */
+    width: 100%;
+    height: 46px;
+}
+
+input[type="button"] {
+    width: 100%;
+    height: 46px;
+    font-size: 20px;
+    text-align: center;
+    background-color: rgb(160, 160, 160);
+    color: rgb(255, 255, 255);
+    border-radius: 20px;
+    border: none;
+    cursor: pointer; /* Cambia el cursor cuando pasa por encima */
+}
+
+input[type="button"]:hover {
+    background-color: rgb(140, 140, 140);
+    color: rgb(10, 0, 48);
+}
+
 .btn1{
     margin: 0;
     width: 50%;
