--- a/templates/perfil.html
+++ b/templates/perfil.html
@@ -10,6 +10,8 @@
         <form>
             <input type="text" placeholder="Buscar">
             <input type="submit" value="Buscar">
+            <a href="{{ url_for('editar_perfil') }}">Editar Perfil</a>
+
         </form>
     </div>
     <div><!-- Contenido -->
