--- a/templates/editar_perfil.html
+++ b/templates/editar_perfil.html
@@ -11,7 +11,7 @@
         <p style="color: red;">{{ mensaje }}</p>
     {% endif %}
     <form method="POST" enctype="multipart/form-data">
-        <label for="nuevo_nombre">Nuevo Nombre de Usuario:</label>
+        <label for="nuevo_nombre">Editar Nombre de Usuario:</label>
         <input type="text" id="nuevo_nombre" name="nuevo_nombre" value="{{ user.username }}" required><br><br>
     
         <button type="submit">Guardar Cambios</button>
