Se obtiene la cantidad de likes de las publicaciones desde la base de datos
Implementado el poder ver la cantidad de likes de una publicación mas no se puede dar like desde la interfaz, momentaneamente.

--- a/templates/publicaciones.html
+++ b/templates/publicaciones.html
@@ -45,6 +45,8 @@
                 <li>
                     <p><strong>{{ publicacion.nombre_usuario }}</strong> - <em>{{ publicacion.fecha }}</em></p>
                     <p>{{ publicacion.contenido }}</p>
+                    <p>Likear {{ publicacion.cant_likes}}</p>
+                    <br>
                 </li>
             {% endfor %}
         </ul>
