Se implementa la descripción de perfil de usuario
Ahora el usuario podrá ver la descripción de su perfil.

--- a/templates/editar_perfil.html
+++ b/templates/editar_perfil.html
@@ -23,6 +23,6 @@
     
     
 
-    <a href="{{ url_for('perfil') }}">Volver al perfil</a>
+    <a href="{{ url_for('perfil', id_usuario=user.id) }}">Volver al perfil</a>
 </body>
 </html>
