--- a/templates/perfil.html
+++ b/templates/perfil.html
@@ -28,6 +28,7 @@
         <br>
         <p>{{ user.username }}</p>
         <p>{{ user.email }}</p>
+        <p>{{ user.descripcion}}</p>
         <p>Siguiendo {{ cant_seguidos }}  Seguidores {{ cant_seguidores }}</p>
         
         <div>
