--- a/templates/publicaciones.html
+++ b/templates/publicaciones.html
@@ -69,7 +69,14 @@
                         - <em>{{ publicacion.fecha }}</em>
                     </p>                    
                     <p>{{ publicacion.contenido }}</p>
-                    <p>Likear {{ publicacion.cant_likes}}</p>
+                    <form action="{{ url_for('likear_publicacion', id_publicacion=publicacion.id_publicacion) }}" method="GET">
+                        {% if publicacion.like %}
+                            <button type="submit">Unlikear</button>
+                        {% else %}
+                            <button type="submit">Likear</button>
+                        {% endif %}
+                        {{ publicacion.cant_likes}}
+                    </form>
                     <br>
                 </li>
             {% endfor %}
