--- a/templates/inicio_sesion.html
+++ b/templates/inicio_sesion.html
@@ -20,7 +20,7 @@
                         <img src="{{url_for('static', filename='./Images/logo_user.png')}}" class="img_icono1">
                     </div>
                     <div class="cubo3_2">
-                        <input type="text" name="username" id="username" placeholder="Nombre de usuario o correo electrónico" class="text1">
+                        <input type="text" name="username" id="username" placeholder="Usuario o Correo" class="text1">
                     </div>
                 </div>
                 <div class="cubo3">
