--- a/static/CSS/publicaciones.css
+++ b/static/CSS/publicaciones.css
@@ -9,6 +9,7 @@ a {
     text-decoration: none;
     color: white;
     font-size: 20px;
+    padding: 0 1.5%;
 }
 
 hr {
@@ -147,7 +148,7 @@ ul {
     text-align: center;
     text-align: left;
     border-radius: 10px;
-    border: 2px solid;
+    border: 3px solid;
     border-color:  #05004491;
 }
 .likeuser{
