--- a/templates/editar_perfil.html
+++ b/templates/editar_perfil.html
@@ -3,26 +3,40 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="{{url_for('static', filename='./CSS/editar_perfil.css')}}">
     <title>Editar Perfil</title>
 </head>
 <body>
-    <h1>Editar Perfil</h1>
-    <form method="POST" action="{{ url_for('editar_perfil') }}">
-        <label for="nuevo_nombre">Nombre Usuario:</label>
-        <input type="text" id="nuevo_nombre" name="nuevo_nombre" value="{{ user['username'] }}" required><br><br>
+    <div class="barrita">
+        <p class="titulo">Editar Perfil</p>
+        <div class="edit">
+            {% if profile_picture %}
+            <img src="data:image/png;base64,{{ profile_picture }}" alt="Foto de perfil" class="img1">
+            {% else %}
+            <!-- <p>No hay foto de perfil disponible.</p> -->
+            {% endif %}
+        </div>
+    </div>
     
-        <label for="nuevo_mensaje">Descripción:</label><br>
-        <textarea id="nuevo_mensaje" name="nuevo_mensaje" rows="4">{{ user['mensaje'] }}</textarea><br><br>
-    
-        <button type="submit">Guardar cambios</button><br><br>
-    
-        {% if error %}
-        <p style="color: red;">{{ mensaje }}</p>
-        {% endif %}
+    <div class="container">
+        <div class="dentro">
+            <form method="POST" action="{{ url_for('editar_perfil') }}">
+                <label for="nuevo_nombre">Nombre Usuario:</label>
+                <input type="text" id="nuevo_nombre" name="nuevo_nombre" value="{{ user['username'] }}" required><br><br>
+            
+                <label for="nuevo_mensaje">Descripción:</label><br>
+                <textarea id="nuevo_mensaje" name="nuevo_mensaje" rows="4">{{ user['mensaje'] }}</textarea><br><br>
+            
+                <button type="submit">Guardar</button><br><br>
+            
+                {% if error %}
+                <p style="color: red;">{{ mensaje }}</p>
+                {% endif %}
+        </div>
+        
     </form>
+    </div>
+    <a href="{{ url_for('perfil', id_usuario=user.id) }}">Regresar</a>
     
-    
-
-    <a href="{{ url_for('perfil', id_usuario=user.id) }}">Volver al perfil</a>
 </body>
 </html>
